--- a/package.json
+++ b/package.json
@@ -1,23 +1,36 @@
 {
   "name": "eslint-plugin-link-slash-end",
-  "version": "1.0.0",
-  "description": "链接必须以 / 结尾",
-  "main": "index.js",
+  "version": "0.0.0",
+  "description": "页面链接必须以 / 结尾",
+  "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha tests --recursive"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/HaganHan/eslint-plugin-link-slash-end.git"
   },
-  "author": "",
+  "author": "Hagan",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/HaganHan/eslint-plugin-link-slash-end/issues"
   },
   "homepage": "https://github.com/HaganHan/eslint-plugin-link-slash-end#readme",
   "devDependencies": {
+    "eslint": "^7.1.0",
     "generator-eslint": "^2.0.0",
+    "mocha": "^7.2.0",
     "yo": "^3.1.1"
+  },
+  "dependencies": {
+    "requireindex": "~1.1.0"
+  },
+  "keywords": [
+    "eslint",
+    "eslintplugin",
+    "eslint-plugin"
+  ],
+  "engines": {
+    "node": ">=0.10.0"
   }
 }
