--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,26 +1,11 @@
 name: '@hagan/eslint-plugin-link-slash-end'
 
 on: 
-  push:
-    branches:
-      - master
+  push
 
 jobs:
-  build:
-    runs-on: ubuntu-18.04
-    steps:
-      - name: pull # 拉取代码
-        uses: actions/checkout@v2.3.1
-
-      - name: install # 安装依赖
-        run: yarn install
-
-      - name: build # 编译
-        run: yarn build:rollup
-
   deploy:
-    needs: build
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
       - name: pull # 拉取代码
         uses: actions/checkout@v2.3.1
@@ -38,7 +23,7 @@ jobs:
 
       - name: version # 获取正确版本号
         run: |
-          npm info @hagan/vue-router version > .version
+          npm info @hagan/eslint-plugin-link-slash-end version 2> /dev/null && npm info @hagan/eslint-plugin-link-slash-end version > .version || echo 0.0.0 > .version
           node ./updatePackageVersion.js
           git add .
           git commit -m "update package version"
