--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@hagan/eslint-plugin-link-slash-end",
-  "version": "0.0.0",
+  "name": "eslint-plugin-link-slash-end",
+  "version": "0.0.2",
   "description": "页面链接必须以 / 结尾",
   "main": "lib/index.js",
   "scripts": {
